[tool.poetry]
name = "dataengineeringutils3"
version = "0.1.2"
description = "Data engineering utils python 3 version"
authors = ["Josh Rowe <josh.rowe@digital.justice.gov.uk>"]
license = "MIT"
exclude = ["tests*"]
readme = "README.md"
homepage = "https://github.com/moj-analytical-services/dataengineeringutils3"
repository = "https://github.com/moj-analytical-services/dataengineeringutils3"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.10"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
moto = "^1.3"
pytest-cov = "^2.8"
boto3 = "^1.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
