[tool.poetry]
name = "dataengineeringutils3"
version = "1.1.1"
description = "Data engineering utils Python 3 version"
authors = ["Data Engineering <dataengineering@digital.justice.gov.uk>"]
license = "MIT"
exclude = ["tests*"]
readme = "README.md"
homepage = "https://github.com/moj-analytical-services/dataengineeringutils3"
repository = "https://github.com/moj-analytical-services/dataengineeringutils3"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.6 <3.9"
boto3 = ">=1.10 <2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
moto = "^1.3"
pytest-cov = "^2.8"
jsonlines = "^1.2"
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
