[tool.poetry]
name = "dataengineeringutils3"
version = "1.4.5"
description = "Data engineering utils Python 3 version"
authors = ["Data Engineering <dataengineering@digital.justice.gov.uk>"]
license = "MIT"
exclude = ["tests*"]
readme = "README.md"
homepage = "https://github.com/moj-analytical-services/dataengineeringutils3"
repository = "https://github.com/moj-analytical-services/dataengineeringutils3"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.11 <3.13"
boto3 = "1.41.5"
Deprecated = "^1.3.1"
PyYAML = "^6.0.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
moto = "^5.1.4"
pytest-cov = "^6.1.1"
jsonlines = "^4.0.0"
flake8 = "^7.3.0"
black = "^25.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
